fixed further issues of card overlapping

--- a/blocks/blog-home/blog-home.css
+++ b/blocks/blog-home/blog-home.css
@@ -163,14 +163,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 30px;
-    height: 40vh;
+    margin-bottom: 80px;
   }
 
   .blog-home-wrapper .blog-home[data-block-status="loaded"] .blog-card picture {
     flex: 0 0 45%;
     max-width: 50%;
-    ;
     position: unset;
     width: unset;
     height: unset;
@@ -180,7 +178,7 @@
   .blog-home[data-block-status="loaded"] .blog-card>.card-content {
     flex-basis: 45%;
     margin-left: 40px;
-    margin-top: 30px;
+    margin-top: 0;
     text-align: left;
   }
 
